75ML30D - Day 5 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![11%](https://progress-bar.dev/11?title=progress&width=100)\n",
+    "![15%](https://progress-bar.dev/15?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -596,9 +596,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ba2d5a4-1fff-476b-be53-038e1d827d7e",
+   "metadata": {},
+   "source": [
+    "# 9. \n",
+    "Date: 13th Jan 2024<br>\n",
+    "Medium Leetcode: minimum-number-of-steps-to-make-two-strings-anagram<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-number-of-steps-to-make-two-strings-anagram/submissions/1144703174"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "78ab7ab2-8fb1-4bb2-ba1d-cbee9f35a439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minSteps(self, s: str, t: str) -> int:\n",
+    "        currentCounter = collections.Counter(s)\n",
+    "        targetCounter = collections.Counter(t)\n",
+    "        \n",
+    "        count = 0\n",
+    "        for k, v in currentCounter.items():\n",
+    "            count += max(v - targetCounter.get(k, 0), 0)\n",
+    "        \n",
+    "        return count\n",
+    "    \n",
+    "# Test the solution\n",
+    "assert Solution().minSteps(\"leetcode\", \"practice\") == 5\n",
+    "assert Solution().minSteps(\"anagram\", \"mangaar\") == 0\n",
+    "assert Solution().minSteps(\"bab\", \"aba\") == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41847160-0cd4-4965-917a-4cb49e2702b3",
+   "metadata": {},
+   "source": [
+    "# 10. \n",
+    "Date: 13th Jan 2024<br>\n",
+    "Medium Leetcode: longest-common-subsequence<br>\n",
+    "Solution: https://leetcode.com/problems/longest-common-subsequence/submissions/1144816986"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e04bc9c4-47ca-4c86-9c1e-21cb914e78f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestCommonSubsequence(self, text1: str, text2: str) -> int:\n",
+    "        \n",
+    "        n1, n2 = len(text1), len(text2)\n",
+    "\n",
+    "        def iterate() -> int:\n",
+    "            prev = [0 for _ in range(n1 + 1)]\n",
+    "            for i in range(n2 - 1, -1, -1):\n",
+    "                curr = [0 for _ in range(n1 + 1)]\n",
+    "                for j in range(n1 - 1, -1, -1):\n",
+    "                    if text1[j] == text2[i]:\n",
+    "                        curr[j] = 1 + prev[j + 1]\n",
+    "                    else:\n",
+    "                        curr[j] = max(prev[j], curr[j + 1])\n",
+    "                prev = curr\n",
+    "                        \n",
+    "            return curr[0]\n",
+    "\n",
+    "        @functools.cache\n",
+    "        def backtrack(i: int, j: int) -> int:\n",
+    "            if i == n1 or j == n2:\n",
+    "                return 0\n",
+    "            elif text1[i] == text2[j]:\n",
+    "                return 1 + backtrack(i + 1, j + 1)\n",
+    "            else:\n",
+    "                return max(backtrack(i, j + 1), backtrack(i + 1, j))\n",
+    "        \n",
+    "        return iterate()\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().longestCommonSubsequence(\"abcded\", \"acede\") == 4\n",
+    "assert Solution().longestCommonSubsequence(\"\", \"acede\") == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d14e8431-df72-467b-ad3e-16dea850bf65",
+   "metadata": {},
+   "source": [
+    "# 11. \n",
+    "Date: 13th Jan 2024<br>\n",
+    "Medium Leetcode: edit-distance<br>\n",
+    "Solution: https://leetcode.com/problems/edit-distance/submissions/1145197901/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1874e826-c82f-4507-8651-a6008fb1a856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minDistance(self, word1: str, word2: str) -> int:\n",
+    "        \"\"\"\n",
+    "        Remove / insert characters towards the end to match length\n",
+    "        Replace all characters with characters from word2\n",
+    "        Upper bound = max(n1, n2) - min(n1, n2) + n2\n",
+    "\n",
+    "        # Optimized approach after watching 2 min of neetcode - watch tutorial\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Find the length of both the words\n",
+    "        n1, n2 = len(word1), len(word2) \n",
+    "\n",
+    "        @functools.cache\n",
+    "        def backtrack(i: int, j: int) -> int:\n",
+    "            if i >= n1 or j >= n2:\n",
+    "                return max(n1 - i, n2 - j)\n",
+    "            elif word1[i] == word2[j]:\n",
+    "                return backtrack(i + 1, j + 1)\n",
+    "            else:\n",
+    "                return 1 + min(\n",
+    "                    # Replace current char\n",
+    "                    backtrack(i + 1, j + 1),\n",
+    "\n",
+    "                    # Remove current char\n",
+    "                    backtrack(i + 1, j),\n",
+    "\n",
+    "                    # Insert char from target string\n",
+    "                    backtrack(i, j + 1)\n",
+    "                )\n",
+    "        \n",
+    "        answer = backtrack(0, 0)\n",
+    "        return answer\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minDistance(\"horse\", \"ros\") == 3\n",
+    "assert Solution().minDistance(\"intention\", \"execution\") == 5\n",
+    "assert Solution().minDistance(\"mississippi\", \"missouri\") == 6\n",
+    "assert Solution().minDistance(\"\", \"abcd\") == 4\n",
+    "assert Solution().minDistance(\"abcd\", \"\") == 4\n",
+    "assert Solution().minDistance(\"\", \"\") == 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30524e60-f5ad-4a37-a281-32c7d89619e0",
+   "id": "9d10fcea-4658-43a7-9b52-17d4f2935484",
    "metadata": {},
    "outputs": [],
    "source": []
