75ML30D - Day 6 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![15%](https://progress-bar.dev/15?title=progress&width=100)\n",
+    "![17%](https://progress-bar.dev/17?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -744,9 +744,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b70d5893-6482-4547-95b7-105f9cde2902",
+   "metadata": {},
+   "source": [
+    "# 12. \n",
+    "Date: 14th Jan 2024<br>\n",
+    "Medium Leetcode: determine-if-two-strings-are-close<br>\n",
+    "Solution: https://leetcode.com/problems/determine-if-two-strings-are-close/submissions/1145505023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9d10fcea-4658-43a7-9b52-17d4f2935484",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def closeStrings(self, word1: str, word2: str) -> bool:\n",
+    "        n1 = len(word1)\n",
+    "        n2 = len(word2) \n",
+    "\n",
+    "        if n1 != n2:\n",
+    "            return False\n",
+    "        \n",
+    "        else:\n",
+    "            counter1 = collections.Counter(word1)\n",
+    "            counter2 = collections.Counter(word2)\n",
+    "            freq_match = sorted(counter1.values()) == sorted(counter2.values())\n",
+    "            key_match = sorted(counter1.keys()) == sorted(counter2.keys())\n",
+    "            return freq_match and key_match\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().closeStrings(\"abc\", \"bca\") == True\n",
+    "assert Solution().closeStrings(\"a\", \"aa\") == False\n",
+    "assert Solution().closeStrings(\"cabbba\", \"abbccc\") == True\n",
+    "assert Solution().closeStrings(\"faddda\", \"dccaaa\") == False\n",
+    "assert Solution().closeStrings(\"faddda\", \"dffaaa\") == True\n",
+    "assert Solution().closeStrings(\"faddda\", \"dffdaa\") == False\n",
+    "assert Solution().closeStrings(\"aaabbbbccddeeeeefffff\", \"aaaaabbcccdddeeeeffff\") == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf1c9229-0df7-4ef7-8b7f-10b603ef784d",
+   "metadata": {},
+   "source": [
+    "# 13. \n",
+    "Date: 14th Jan 2024<br>\n",
+    "Medium Leetcode: find-beautiful-indices-in-the-given-array-i<br>\n",
+    "Solution: https://leetcode.com/problems/find-beautiful-indices-in-the-given-array-i/submissions/1145567672/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b2b4b9aa-622d-4e79-8620-511588e6c7a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def beautifulIndices(self, s: str, a: str, b: str, k: int) -> List[int]:\n",
+    "        result = []\n",
+    "        for i, ch in enumerate(s):\n",
+    "            if ch == a[0] and a == s[i: i + len(a)]:\n",
+    "                if b in s[max(i - k, 0): i + k + len(b)]:\n",
+    "                    result.append(i)\n",
+    "        \n",
+    "        return result\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().beautifulIndices(\"abcd\", \"a\", \"b\", 1) == [0]\n",
+    "assert Solution().beautifulIndices(\"abcd\", \"a\", \"cd\", 1) == []\n",
+    "assert Solution().beautifulIndices(\"a\", \"a\", \"a\", 1) == [0]\n",
+    "assert Solution().beautifulIndices(\"a\", \"a\", \"aa\", 1) == []\n",
+    "assert Solution().beautifulIndices(\"vatevavakz\", \"va\", \"lbda\", 1) == []"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d10fcea-4658-43a7-9b52-17d4f2935484",
+   "id": "e3dc32da-5efe-48fe-b3e3-f37de99addd1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -754,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16381e74-d308-46ef-b119-1d3ce07fa45d",
+   "id": "c9e5bd6a-269e-4288-ad2c-3bb20a929706",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -763,6 +842,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "074bd7de-d765-4186-bf5b-51792f902568",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37d04fc7-1698-4a77-81c6-457040421ded",
    "metadata": {},
    "outputs": [],
    "source": []
