--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![17%](https://progress-bar.dev/17?title=progress&width=100)\n",
+    "![20%](https://progress-bar.dev/20?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -823,25 +823,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3dc32da-5efe-48fe-b3e3-f37de99addd1",
+   "cell_type": "markdown",
+   "id": "4c6bd2e3-1c23-4341-8015-70f48c016580",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 15. \n",
+    "Date: 14th Jan 2024<br>\n",
+    "Medium Leetcode: spiral-matrix-ii<br>\n",
+    "Solution: https://leetcode.com/problems/spiral-matrix-ii/submissions/1146146173"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c9e5bd6a-269e-4288-ad2c-3bb20a929706",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 02 03 04 05 06 07 08 \n",
+      "28 29 30 31 32 33 34 09 \n",
+      "27 48 49 50 51 52 35 10 \n",
+      "26 47 60 61 62 53 36 11 \n",
+      "25 46 59 64 63 54 37 12 \n",
+      "24 45 58 57 56 55 38 13 \n",
+      "23 44 43 42 41 40 39 14 \n",
+      "22 21 20 19 18 17 16 15 \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def generateMatrix(self, n: int) -> List[List[int]]: \n",
+    "        result = [[0 for _ in range(n)] for __ in range(n)]\n",
+    "        directions = (0, 1), (1, 0), (0, -1), (-1, 0)\n",
+    "\n",
+    "        curr = 1\n",
+    "        n_layers = math.ceil(n / 2)\n",
+    "        for i in range(n_layers):\n",
+    "            curr_x, curr_y = i, i - 1\n",
+    "            for x_inc, y_inc in directions:\n",
+    "                curr_x, curr_y = curr_x + x_inc, curr_y + y_inc\n",
+    "                while i <= curr_x < n - i and i <= curr_y < n - i:\n",
+    "                    \n",
+    "                    # The below two lines makes me feel like I am cheating\n",
+    "                    if result[curr_x][curr_y] == 0:\n",
+    "                        result[curr_x][curr_y] = curr\n",
+    "                        curr += 1\n",
+    "                        \n",
+    "                    curr_x, curr_y = curr_x + x_inc, curr_y + y_inc\n",
+    "                    \n",
+    "                curr_x, curr_y = curr_x - x_inc, curr_y - y_inc\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Test the solution\n",
+    "temp = 8\n",
+    "_ = len(str(temp * temp))\n",
+    "for __ in Solution().generateMatrix(temp):\n",
+    "    for ___ in __:\n",
+    "        print (str(___).zfill(_), end=' ')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "074bd7de-d765-4186-bf5b-51792f902568",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da889ac6-58e4-4ee7-8346-c68c3d985de4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca106393-1188-4324-bc30-016330f598c7",
    "metadata": {},
    "outputs": [],
    "source": []
