--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![20%](https://progress-bar.dev/20?title=progress&width=100)\n",
+    "![25%](https://progress-bar.dev/25?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -889,20 +889,232 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "074bd7de-d765-4186-bf5b-51792f902568",
+   "cell_type": "markdown",
+   "id": "cddb8de5-bdcd-407f-9db0-c04d37fea5d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 16. \n",
+    "Date: 15th Jan 2024<br>\n",
+    "Medium Leetcode: find-players-with-zero-or-one-losses<br>\n",
+    "Solution: https://leetcode.com/problems/find-players-with-zero-or-one-losses/submissions/1146505590"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da889ac6-58e4-4ee7-8346-c68c3d985de4",
+   "execution_count": 18,
+   "id": "dfe7330f-128b-4f9c-98ec-73866a105bd1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def findWinners(self, matches: List[List[int]]) -> List[List[int]]:\n",
+    "        players = set()\n",
+    "        loss_count = dict()\n",
+    "        for winner, loser in matches:\n",
+    "            players.add(winner)\n",
+    "            players.add(loser)\n",
+    "            loss_count[loser] = loss_count.get(loser, 0) + 1\n",
+    "\n",
+    "        result = [[],[]]\n",
+    "        for player in sorted(players):\n",
+    "            if player not in loss_count:\n",
+    "                result[0].append(player)\n",
+    "            elif loss_count[player] == 1:\n",
+    "                result[1].append(player)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findWinners([[1,3],[2,3],[3,6],[5,6],[5,7],[4,5],[4,8],[4,9],[10,4],[10,9]]) == [[1,2,10],[4,5,7,8]]\n",
+    "assert Solution().findWinners([[2,3],[1,3],[5,4],[6,4]]) == [[1,2,5,6],[]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55327cd2-f6fd-4335-ab7e-635754549525",
+   "metadata": {},
+   "source": [
+    "# 17. \n",
+    "Date: 15th Jan 2024<br>\n",
+    "Medium Leetcode: swap-nodes-in-pairs<br>\n",
+    "Solution: https://leetcode.com/problems/swap-nodes-in-pairs/submissions/1146525714/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "074bd7de-d765-4186-bf5b-51792f902568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def swapPairs(self, head: ListNode) -> ListNode:\n",
+    "\n",
+    "        if not head or not head.next:\n",
+    "            return head\n",
+    "\n",
+    "        prev_, curr_, next_ = None, head, head.next\n",
+    "        while next_: \n",
+    "\n",
+    "            curr_.next = next_.next\n",
+    "            next_.next = curr_\n",
+    "\n",
+    "            if prev_:\n",
+    "                prev_.next = next_\n",
+    "            else:\n",
+    "                head = next_\n",
+    "\n",
+    "            if curr_.next:\n",
+    "                prev_, curr_, next_ = curr_, curr_.next, curr_.next.next\n",
+    "            else:\n",
+    "                break\n",
+    "        \n",
+    "        return head\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().swapPairs(ListNode.to_singly_linked_list([])) is None\n",
+    "assert Solution().swapPairs(ListNode.to_singly_linked_list([1])).to_list() == [1]\n",
+    "assert Solution().swapPairs(ListNode.to_singly_linked_list([1, 2])).to_list() == [2, 1]\n",
+    "assert Solution().swapPairs(ListNode.to_singly_linked_list([1, 2, 3])).to_list() == [2, 1, 3]\n",
+    "assert Solution().swapPairs(ListNode.to_singly_linked_list([1, 2, 3, 4])).to_list() == [2, 1, 4, 3]\n",
+    "assert Solution().swapPairs(ListNode.to_singly_linked_list([1, 2, 3, 4, 5])).to_list() == [2, 1, 4, 3, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41d300e4-1996-40cf-ae82-e178d7a08200",
+   "metadata": {},
+   "source": [
+    "# 18. \n",
+    "Date: 15th Jan 2024<br>\n",
+    "Medium Leetcode: simplify-path<br>\n",
+    "Solution: https://leetcode.com/problems/simplify-path/submissions/1146606869"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0a53c385-c89f-437d-a0d9-564a40c6dded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def simplifyPath(self, path: str) -> str:\n",
+    "        result = []\n",
+    "\n",
+    "        # Treat \"$\" as end of path character\n",
+    "        for ch in path + \"$\":\n",
+    "\n",
+    "            prev = result[-1] if len(result) else None\n",
+    "\n",
+    "            # First char, insert as is\n",
+    "            if prev is None:\n",
+    "                result.append(ch)\n",
+    "\n",
+    "            # Path related\n",
+    "            elif ch == \"/\":\n",
+    "                # Do nothing - \"//\"\n",
+    "                if prev == \"/\":\n",
+    "                    pass\n",
+    "                # Remove the dot and ignore ch - \"./\"\n",
+    "                elif prev == \".\":\n",
+    "                    result.pop()\n",
+    "                # Remove last four parts - \"/..\", \"/etc/..\", \"/etc/config/..\"; Insert \"/\"\n",
+    "                elif prev == \"..\":\n",
+    "                    result = result[:-4]\n",
+    "                    result.append(ch)\n",
+    "                else:\n",
+    "                    result.append(ch)\n",
+    "\n",
+    "            # End of path\n",
+    "            elif ch == \"$\":\n",
+    "                # Ending with a \"/\", remove it\n",
+    "                if prev == \"/\" and len(result) > 1:\n",
+    "                    result.pop()\n",
+    "                # Ends with a \".\", remove it - \"/abc/.\"\n",
+    "                elif prev == \".\":\n",
+    "                    result = result[:-2]\n",
+    "                # Ends with a \"..\", remove it, go back by 2 dirs - \"/abc/..\"\n",
+    "                elif prev == \"..\":\n",
+    "                    result = result[:-4]\n",
+    "\n",
+    "                # Say we had \"/.\" or \"/..\", it would end up as \"\"\n",
+    "                if not len(result):\n",
+    "                    result.append(\"/\")\n",
+    "\n",
+    "            # Everything else is treated as part of dir / file name\n",
+    "            else:\n",
+    "                if prev == \"/\":\n",
+    "                    result.append(ch)\n",
+    "                else:\n",
+    "                    result[-1] = prev + ch\n",
+    "\n",
+    "        return \"\".join(result)\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().simplifyPath(\"/\") == \"/\"\n",
+    "assert Solution().simplifyPath(\"/./../\") == \"/\"\n",
+    "assert Solution().simplifyPath(\"/.gitignore\") == \"/.gitignore\"\n",
+    "assert Solution().simplifyPath(\"/abc\") == \"/abc\"\n",
+    "assert Solution().simplifyPath(\"/home//foo/\") == \"/home/foo\"\n",
+    "assert Solution().simplifyPath(\"/home/kael/././configs/../.vimrc\") == \"/home/kael/.vimrc\"\n",
+    "assert Solution().simplifyPath(\"/../../../etc////////abc...abc\") == \"/etc/abc...abc\"\n",
+    "assert Solution().simplifyPath(\"///////......./.../..\") == \"/.......\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "422e9af9-7abd-48f5-9bdb-ed0bd628c746",
+   "metadata": {},
+   "source": [
+    "# 19. \n",
+    "Date: 15th Jan 2024<br>\n",
+    "Medium Leetcode: reorder-list<br>\n",
+    "Solution: https://leetcode.com/problems/reorder-list/submissions/1147036556/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5499f6dd-c1f9-41d3-9b68-a3a7eabfc7fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reorderList(self, head: ListNode) -> ListNode:\n",
+    "        # Find the middle\n",
+    "        slow = fast = head\n",
+    "        while fast and fast.next:\n",
+    "            fast = fast.next.next\n",
+    "            slow = slow.next\n",
+    "\n",
+    "        # slow is the start of second half, cut link from first half\n",
+    "        second_start = slow.next\n",
+    "        slow.next = None\n",
+    "\n",
+    "        # Reverse list starting from second_start and get the head\n",
+    "        prev, curr = None, second_start\n",
+    "        while curr:\n",
+    "            next_ = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev, curr = curr, next_\n",
+    "\n",
+    "        # prev is the start of the reversed second half\n",
+    "        p1, p2 = head, prev\n",
+    "        while p1 and p2:\n",
+    "            next_p1, next_p2 = p1.next, p2.next\n",
+    "            p1.next, p2.next = p2, p1.next\n",
+    "            p1, p2 = next_p1, next_p2\n",
+    "\n",
+    "        return head\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().reorderList(ListNode.to_singly_linked_list([1])).to_list() == [1]\n",
+    "assert Solution().reorderList(ListNode.to_singly_linked_list([1,2])).to_list() == [1,2]\n",
+    "assert Solution().reorderList(ListNode.to_singly_linked_list([1,2,3])).to_list() == [1,3,2]\n",
+    "assert Solution().reorderList(ListNode.to_singly_linked_list([1,2,3,4])).to_list() == [1,4,2,3]\n",
+    "assert Solution().reorderList(ListNode.to_singly_linked_list([1,2,3,4,5])).to_list() == [1,5,2,4,3]"
+   ]
   },
   {
    "cell_type": "code",
@@ -915,7 +1127,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98c91104-1e43-4e91-b7c3-dd0e7746ad06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "37d04fc7-1698-4a77-81c6-457040421ded",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "844f53bc-c822-4deb-a4e6-c40591db75c4",
    "metadata": {},
    "outputs": [],
    "source": []
