75ML30D - Day 8 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![25%](https://progress-bar.dev/25?title=progress&width=100)\n",
+    "![28%](https://progress-bar.dev/28?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1117,17 +1117,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25dbdad8-ccc7-4edc-b719-7c44a480862f",
+   "metadata": {},
+   "source": [
+    "# 20. \n",
+    "Date: 16th Jan 2024<br>\n",
+    "Medium Leetcode: insert-delete-getrandom-o1<br>\n",
+    "Solution: https://leetcode.com/problems/insert-delete-getrandom-o1/submissions/1147368883"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ca106393-1188-4324-bc30-016330f598c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "class RandomizedSet:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.length = 0\n",
+    "        self.hashset = set()\n",
+    "        self.randomlist = []\n",
+    "        self.modified = False\n",
+    "\n",
+    "    def insert(self, val: int) -> bool:\n",
+    "        'O(1) time complexity'\n",
+    "        if val not in self.hashset:\n",
+    "            self.hashset.add(val)\n",
+    "            self.length += 1\n",
+    "            self.modified = True\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def remove(self, val: int) -> bool:\n",
+    "        'O(1) time complexity'\n",
+    "        if val in self.hashset:\n",
+    "            self.hashset.remove(val)\n",
+    "            self.length -= 1\n",
+    "            self.modified = True\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def getRandom(self) -> int:\n",
+    "        'If data was recently modified, takes time to build the list, otherwise O(1) time complexity'\n",
+    "        idx = random.randint(0, self.length - 1) \n",
+    "        if self.modified:\n",
+    "            self.randomlist = list(self.hashset)\n",
+    "            self.modified = False\n",
+    "\n",
+    "        return self.randomlist[idx]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4691d385-d5e8-4dd7-84fe-78bf93bbeaa0",
+   "metadata": {},
+   "source": [
+    "# 21. \n",
+    "Date: 16th Jan 2024<br>\n",
+    "Medium Leetcode: car-fleet<br>\n",
+    "Solution: https://leetcode.com/problems/car-fleet/submissions/1147391441"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "62c92058-0f72-4d72-b5bd-c2be78b10de2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def carFleet(self, target: int, position: List[int], speed: List[int]) -> int:\n",
+    "        # O(n log n)\n",
+    "        position, speed = zip(*sorted(zip(position, speed), key=lambda x: x[0], reverse=True))\n",
+    "\n",
+    "        # O(n)\n",
+    "        time = []\n",
+    "        for p, s in zip(position, speed):\n",
+    "            if s != 0:\n",
+    "                time.append((target - p) / s)\n",
+    "            if s == 0:\n",
+    "                break\n",
+    "\n",
+    "        # O(n)\n",
+    "        fleet_count = 0\n",
+    "        prev = -math.inf\n",
+    "        for t in time:\n",
+    "            if t > prev:\n",
+    "                fleet_count += 1\n",
+    "                prev = t\n",
+    "\n",
+    "        return fleet_count\n",
+    "        \n",
+    "# Testing the solution\n",
+    "assert Solution().carFleet(12, [10,8,0,5,3], [1,4,1,1,3]) == 3\n",
+    "assert Solution().carFleet(10, [3], [3]) == 1\n",
+    "assert Solution().carFleet(100, [0,2,4], [4,2,1]) == 1\n",
+    "assert Solution().carFleet(100, [0,2,4], [4,2,0]) == 0"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98c91104-1e43-4e91-b7c3-dd0e7746ad06",
+   "id": "72b97aa4-4ee3-4712-8d11-75e16c7870ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1135,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d04fc7-1698-4a77-81c6-457040421ded",
+   "id": "30b639c8-e1f0-4dd7-97ed-7ba47737e943",
    "metadata": {},
    "outputs": [],
    "source": []
