75ML30D - Day 8 - Check In - II

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![28%](https://progress-bar.dev/28?title=progress&width=100)\n",
+    "![29%](https://progress-bar.dev/29?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1223,9 +1223,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acbeeb31-1f6c-4335-8cc0-cd29b659a586",
+   "metadata": {},
+   "source": [
+    "# 22. \n",
+    "Date: 16th Jan 2024<br>\n",
+    "Medium Leetcode: k-th-smallest-prime-fraction<br>\n",
+    "Solution: https://leetcode.com/problems/k-th-smallest-prime-fraction/submissions/1147402296/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "af0b59bb-6617-4d8e-a914-f356191e5150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def kthSmallestPrimeFraction_(self, arr: List[int], k: int) -> List[int]:\n",
+    "        '''\n",
+    "        This solution only runs as long as neccessary. If k is small this might work better than other solutions\n",
+    "        Could be optimized by going for largest if k is above the mid point of nc2 combinations\n",
+    "        '''\n",
+    "        \n",
+    "        n = len(arr)\n",
+    "        pointers = dict.fromkeys(arr[:-1], 1)\n",
+    "        \n",
+    "        while k > 0:\n",
+    "            minimum_fraction = (math.inf, 1)\n",
+    "            for numerator in pointers:\n",
+    "                denominator = arr[n - pointers[numerator]]\n",
+    "                if (numerator / denominator) <= (minimum_fraction[0] / minimum_fraction[1]):\n",
+    "                    minimum_fraction = numerator, denominator\n",
+    "\n",
+    "            # Increment the pointer by 1\n",
+    "            pointers[minimum_fraction[0]] += 1\n",
+    "\n",
+    "            if arr[n - pointers[minimum_fraction[0]]] == minimum_fraction[0]:\n",
+    "                pointers.pop(minimum_fraction[0])\n",
+    "\n",
+    "            # Decrease k and continue finding the next minimum fraction\n",
+    "            k -= 1\n",
+    "\n",
+    "        return minimum_fraction\n",
+    "\n",
+    "    def kthSmallestPrimeFraction(self, arr: List[int], k: int) -> List[int]:\n",
+    "        return sorted(itertools.combinations(arr, r=2), key=lambda x: x[0] / x[1])[k - 1]\n",
+    "        \n",
+    "# Testing the solution\n",
+    "assert Solution().kthSmallestPrimeFraction([1, 2, 3, 4, 5], 1) == (1, 5)\n",
+    "assert Solution().kthSmallestPrimeFraction([1, 2, 3, 4, 5], 2) == (1, 4)\n",
+    "assert Solution().kthSmallestPrimeFraction([1, 2, 3, 4, 5], 4) == (2, 5)\n",
+    "assert Solution().kthSmallestPrimeFraction([1, 2, 3, 4, 5], 6) == (2, 4)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b97aa4-4ee3-4712-8d11-75e16c7870ae",
+   "id": "83b4821b-d511-416a-b6cb-fc9491313c3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1263,7 +1319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
