--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![29%](https://progress-bar.dev/29?title=progress&width=100)\n",
+    "![31%](https://progress-bar.dev/31?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "af0b59bb-6617-4d8e-a914-f356191e5150",
    "metadata": {},
    "outputs": [],
@@ -1279,9 +1279,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bdcfdc90-610e-420d-a70f-c538c7bfa337",
+   "metadata": {},
+   "source": [
+    "# 23. \n",
+    "Date: 17th Jan 2024<br>\n",
+    "Medium Leetcode: knight-dialer<br>\n",
+    "Solution: https://leetcode.com/problems/knight-dialer/submissions/1148348130"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "83b4821b-d511-416a-b6cb-fc9491313c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def knightDialer(self, n: int) -> int:\n",
+    "        \"\"\"\n",
+    "         1  2  3  4  5  6  7  8  9  0\n",
+    "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+    "        [2, 2, 2, 3, 0, 3, 2, 2, 2, 2]\n",
+    "        [5, 4, 5, 6, 0, 6, 5, 4, 5, 6]\n",
+    "        \"\"\"\n",
+    "\n",
+    "        MOD = (10 ** 9) + 7\n",
+    "        dialpad_paths = {\n",
+    "            1: [6, 8],\n",
+    "            2: [7, 9],\n",
+    "            3: [4, 8],\n",
+    "            4: [0, 3, 9],\n",
+    "            5: [],\n",
+    "            6: [0, 1, 7],\n",
+    "            7: [2, 6],\n",
+    "            8: [1, 3],\n",
+    "            9: [2, 4],\n",
+    "            0: [4, 6]\n",
+    "        }            \n",
+    "\n",
+    "        dp = [1] * 10\n",
+    "        while n > 1:\n",
+    "            new_row = []\n",
+    "            for i in range(10):\n",
+    "                new_row.append(sum(dp[j] for j in dialpad_paths[i]))\n",
+    "                \n",
+    "            dp = new_row\n",
+    "            n -= 1\n",
+    "\n",
+    "        return sum(dp) % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().knightDialer(1) == 10\n",
+    "assert Solution().knightDialer(2) == 20\n",
+    "assert Solution().knightDialer(3131) == 136006598\n",
+    "assert Solution().knightDialer(100) == 540641702\n",
+    "assert Solution().knightDialer(99) == 168850940"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b4821b-d511-416a-b6cb-fc9491313c3b",
+   "id": "4aee5dd0-3b6a-4497-b490-8e281de32105",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1289,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b639c8-e1f0-4dd7-97ed-7ba47737e943",
+   "id": "afb882c8-8003-4af0-bc83-6207b90426bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1319,7 +1379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
