75ML30D - Day 10 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![31%](https://progress-bar.dev/31?title=progress&width=100)\n",
+    "![33%](https://progress-bar.dev/33?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1339,9 +1339,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b62fb524-33c2-4a32-a3d6-743e3bc9d92f",
+   "metadata": {},
+   "source": [
+    "# 24. \n",
+    "Date: 18th Jan 2024<br>\n",
+    "Medium Leetcode: invalid-transactions<br>\n",
+    "Solution: https://leetcode.com/problems/invalid-transactions/submissions/1149291531/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "30fc86c3-fdae-4080-824f-26fbbef37eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def invalidTransactions(self, transactions: List[str]) -> List[str]:\n",
+    "        bank = dict()\n",
+    "        for idx, transaction in enumerate(transactions):\n",
+    "            name, time, amount, city = transaction.split(\",\")\n",
+    "            time = int(time)\n",
+    "            amount = int(amount)\n",
+    "            history = bank.get(name, [])\n",
+    "            history.append((time, amount, city, idx))\n",
+    "            bank[name] = history\n",
+    "\n",
+    "        invalid = set()\n",
+    "        for name in bank:\n",
+    "            account = bank[name]\n",
+    "            account.sort()\n",
+    "\n",
+    "            for i, (time, amount, city, transaction_idx) in enumerate(account):\n",
+    "                if amount > 1000:\n",
+    "                    invalid.add(transaction_idx)\n",
+    "\n",
+    "\n",
+    "                for shift in [-1, 1]:\n",
+    "                    while i + shift >= 0 and i + shift < len(account):\n",
+    "                        prev_time, prev_amount, prev_city, prev_tran_idx = account[i + shift]\n",
+    "                        if abs(prev_time - time) <= 60:\n",
+    "                            if prev_city != city:\n",
+    "                                invalid.add(prev_tran_idx)\n",
+    "                                invalid.add(transaction_idx)\n",
+    "                                \n",
+    "                            if shift < 0:\n",
+    "                                shift -= 1\n",
+    "                            else:\n",
+    "                                shift += 1\n",
+    "                                \n",
+    "                        else:\n",
+    "                            break\n",
+    "\n",
+    "        return [transactions[_] for _ in invalid]\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = [\n",
+    "    [\n",
+    "        [\"alice,20,800,mtv\",\"alice,50,100,beijing\"],\n",
+    "        [\"alice,50,100,beijing\",\"alice,20,800,mtv\"]\n",
+    "    ],\n",
+    "    \n",
+    "    [\n",
+    "        [\"alice,20,800,mtv\",\"alice,50,1200,mtv\"],\n",
+    "        [\"alice,50,1200,mtv\"]\n",
+    "    ],\n",
+    "    \n",
+    "    [\n",
+    "        [\"alice,20,800,mtv\",\"bob,50,1200,mtv\"],\n",
+    "        [\"bob,50,1200,mtv\"]\n",
+    "    ],\n",
+    "    \n",
+    "    [\n",
+    "        [\"alice,20,800,mtv\",\"bob,50,1200,mtv\",\"alice,20,800,mtv\",\"alice,50,1200,mtv\",\"alice,20,800,mtv\",\"alice,50,100,beijing\"],\n",
+    "        [\"alice,20,800,mtv\",\"bob,50,1200,mtv\",\"alice,20,800,mtv\",\"alice,50,1200,mtv\",\"alice,20,800,mtv\",\"alice,50,100,beijing\"]\n",
+    "    ],\n",
+    "\n",
+    "    [\n",
+    "        [\"alex,676,260,bangkok\",\"bob,656,1366,bangkok\",\"alex,393,616,bangkok\",\"bob,820,990,amsterdam\",\"alex,596,1390,amsterdam\"],  \n",
+    "        [\"bob,656,1366,bangkok\",\"alex,596,1390,amsterdam\"]\n",
+    "    ],\n",
+    "\n",
+    "    [\n",
+    "        [\"alice,20,1220,mtv\",\"alice,20,1220,mtv\"],  \n",
+    "        [\"alice,20,1220,mtv\",\"alice,20,1220,mtv\"]\n",
+    "    ],\n",
+    "\n",
+    "    [\n",
+    "        [\"alice,20,800,mtv\",\"alice,50,100,mtv\",\"alice,51,100,frankfurt\"],\n",
+    "        [\"alice,20,800,mtv\",\"alice,50,100,mtv\",\"alice,51,100,frankfurt\"]\n",
+    "    ],\n",
+    "]\n",
+    "\n",
+    "for inp, op in temp:\n",
+    "    assert sorted(Solution().invalidTransactions(inp)) == sorted(op), f\"failed for {inp}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d19f7a-ea38-40d0-ae0b-d0d7f43aa687",
+   "metadata": {},
+   "source": [
+    "# 25. \n",
+    "Date: 18th Jan 2024<br>\n",
+    "Medium Leetcode: https://leetcode.com/problems/longest-arithmetic-subsequence<br>\n",
+    "Solution: https://leetcode.com/problems/longest-arithmetic-subsequence/submissions/1149314640"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d5e81394-820c-4a1c-8062-9690c8560427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestArithSeqLength_(self, nums: List[int]) -> int:\n",
+    "        \"\"\"\n",
+    "        For size 2, return 2 (nums[0], nums[1] regardless of what the nums are)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        @functools.cache\n",
+    "        def backtrack(curr_idx: int, diff: int) -> int:\n",
+    "            curr = nums[curr_idx]\n",
+    "            if curr + diff in idx_dict:\n",
+    "                for next_idx in idx_dict[curr + diff]:\n",
+    "                    if next_idx > curr_idx:\n",
+    "                        # We only need to backtrack into the first index > curr_idx\n",
+    "                        return 1 + backtrack(next_idx, diff)\n",
+    "                else:\n",
+    "                    return 0\n",
+    "            else:\n",
+    "                return 0\n",
+    "\n",
+    "        N = len(nums)\n",
+    "\n",
+    "        idx_dict = dict()\n",
+    "        for i, n in enumerate(nums):\n",
+    "            indices = idx_dict.get(n, [])\n",
+    "            indices.append(i)\n",
+    "            idx_dict[n] = indices\n",
+    "\n",
+    "        if N == 2:\n",
+    "            return 2\n",
+    "        else:\n",
+    "            maxlen = 2\n",
+    "            for i in range(N - 1):\n",
+    "                for j in range(i + 1, N):\n",
+    "                    maxlen = max(maxlen, 2 + backtrack(j, nums[j] - nums[i]))\n",
+    "\n",
+    "            return maxlen\n",
+    "\n",
+    "    def longestArithSeqLength(self, A):\n",
+    "        # https://leetcode.com/problems/longest-arithmetic-subsequence/solutions/274611/java-c-python-dp/\n",
+    "        # Intution is kind of same as what I had done above?\n",
+    "        dp = {}\n",
+    "        for i in range(len(A) - 1):\n",
+    "            for j in range(i + 1, len(A)):\n",
+    "                dp[j, A[j] - A[i]] = dp.get((i, A[j] - A[i]), 1) + 1\n",
+    "\n",
+    "        return max(dp.values())\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().longestArithSeqLength([3,6,9,12]) == 4\n",
+    "assert Solution().longestArithSeqLength([3,6,9,6,12]) == 4\n",
+    "assert Solution().longestArithSeqLength([9,4,7,2,10]) == 3\n",
+    "assert Solution().longestArithSeqLength([20,1,15,3,10,5,8]) == 4\n",
+    "assert Solution().longestArithSeqLength([1,2]) == 2\n",
+    "assert Solution().longestArithSeqLength([1,2,2,3,3,3,3,3,3,3,4,4,5,6,7,8,8,8,8,8,8,8,8,8]) == 9"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aee5dd0-3b6a-4497-b490-8e281de32105",
+   "id": "96c5a77a-0a22-4504-9ece-57854e528d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0dac27b-6e3e-4306-9a22-e6a10d741e16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc959cc8-0010-4c11-a006-7bb9f4762c46",
    "metadata": {},
    "outputs": [],
    "source": []
