75ML30D - Day 10 - Check In - II

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![33%](https://progress-bar.dev/33?title=progress&width=100)\n",
+    "![35%](https://progress-bar.dev/35?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1444,7 +1444,7 @@
    "source": [
     "# 25. \n",
     "Date: 18th Jan 2024<br>\n",
-    "Medium Leetcode: https://leetcode.com/problems/longest-arithmetic-subsequence<br>\n",
+    "Medium Leetcode: longest-arithmetic-subsequence<br>\n",
     "Solution: https://leetcode.com/problems/longest-arithmetic-subsequence/submissions/1149314640"
    ]
   },
@@ -1512,33 +1512,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7763349-e216-40d1-a0c9-d1a7079dafcd",
+   "metadata": {},
+   "source": [
+    "# 26. \n",
+    "Date: 18th Jan 2024<br>\n",
+    "Medium Leetcode: longest-palindromic-substring<br>\n",
+    "Solution: https://leetcode.com/problems/longest-palindromic-substring/submissions/1149814283"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "96c5a77a-0a22-4504-9ece-57854e528d7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def longestPalindrome(self, s: str) -> str:\n",
+    "        '''\n",
+    "        \"abaaba\" -  2\n",
+    "        \"abaaba\" -  3\n",
+    "        \"abaaaba\" - 3\n",
+    "        '''\n",
+    "\n",
+    "        N = len(s)\n",
+    "\n",
+    "        def longestPalindromeAtIndex(idx: int) -> str:\n",
+    "\n",
+    "            # Store the longest\n",
+    "            longest = \"\"\n",
+    "\n",
+    "            # Assuming i is the mid point where palindrome is odd char long\n",
+    "            # Assuming i is the left mid point where palindrome is even char long\n",
+    "            # Assuming i is the right mid point where palindrome is even char long\n",
+    "            for left, right in [[idx - 1, idx + 1], [idx, idx + 1], [idx - 1, idx]]:\n",
+    "\n",
+    "                while left >= 0 and right < N and s[left] == s[right]:\n",
+    "                    left -= 1\n",
+    "                    right += 1\n",
+    "\n",
+    "                longest = longest if right - left - 2 < len(longest) else s[left + 1: right]\n",
+    "\n",
+    "            return longest\n",
+    "\n",
+    "        longest = \"\"\n",
+    "        for i in range(N):\n",
+    "            curr = longestPalindromeAtIndex(i)\n",
+    "            if len(curr) > len(longest):\n",
+    "                longest = curr\n",
+    "\n",
+    "        return longest\n",
+    "\n",
+    "# Testing the Solution\n",
+    "assert Solution().longestPalindrome(\"abaaba\") == \"abaaba\"\n",
+    "assert Solution().longestPalindrome(\"abaaba\") == \"abaaba\"\n",
+    "assert Solution().longestPalindrome(\"abaaaba\") == \"abaaaba\"\n",
+    "assert Solution().longestPalindrome(\"babad\") == \"bab\"\n",
+    "assert Solution().longestPalindrome(\"cbbd\") == \"bb\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0dac27b-6e3e-4306-9a22-e6a10d741e16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc959cc8-0010-4c11-a006-7bb9f4762c46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afb882c8-8003-4af0-bc83-6207b90426bb",
    "metadata": {},
    "outputs": [],
    "source": []
