75ML30D - Day 10 - Check In -III

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![35%](https://progress-bar.dev/35?title=progress&width=100)\n",
+    "![36%](https://progress-bar.dev/36?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "ca106393-1188-4324-bc30-016330f598c7",
    "metadata": {},
    "outputs": [],
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "62c92058-0f72-4d72-b5bd-c2be78b10de2",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "af0b59bb-6617-4d8e-a914-f356191e5150",
    "metadata": {},
    "outputs": [],
@@ -1574,9 +1574,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d455d466",
+   "metadata": {},
+   "source": [
+    "# 27. \n",
+    "Date: 18th Jan 2024<br>\n",
+    "Medium Leetcode: gas-station<br>\n",
+    "Solution: https://leetcode.com/problems/gas-station/submissions/1149948924"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9bfd389e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def canCompleteCircuit(self, gas: List[int], cost: List[int]) -> int:\n",
+    "        \"\"\"\n",
+    "        [1,2,3,4,5]\n",
+    "        [3,4,5,1,2]\n",
+    "\n",
+    "        [-2, -2, -2, 3, 3]\n",
+    "        To complete a circuit, sum should be >= 0\n",
+    "        \"\"\" \n",
+    "\n",
+    "        N = len(gas)\n",
+    "        dp = [gas[i] - cost[i] for i in range(N)]\n",
+    "\n",
+    "        if sum(dp) < 0:\n",
+    "            return -1\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            total = 0\n",
+    "            for i in range(N - 1, -1, -1):\n",
+    "                dp[i] += total\n",
+    "                total = dp[i]\n",
+    "\n",
+    "            return dp.index(max(dp))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().canCompleteCircuit([1,2,3,4,5], [3,4,5,1,2]) == 3\n",
+    "assert Solution().canCompleteCircuit([2,3,4], [3,4,3]) == -1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0dac27b-6e3e-4306-9a22-e6a10d741e16",
+   "id": "ea83ad30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1606,7 +1654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
