--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![36%](https://progress-bar.dev/36?title=progress&width=100)\n",
+    "![44%](https://progress-bar.dev/44?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "ca106393-1188-4324-bc30-016330f598c7",
    "metadata": {},
    "outputs": [],
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "62c92058-0f72-4d72-b5bd-c2be78b10de2",
    "metadata": {},
    "outputs": [],
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "af0b59bb-6617-4d8e-a914-f356191e5150",
    "metadata": {},
    "outputs": [],
@@ -1622,9 +1622,303 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2813ac0e",
+   "metadata": {},
+   "source": [
+    "# 28. \n",
+    "Date: 19th Jan 2024<br>\n",
+    "Medium Leetcode: minimum-falling-path-sum<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-falling-path-sum/submissions/1150236802"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ea83ad30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minFallingPathSum(self, matrix: List[List[int]]) -> int:\n",
+    "        N = len(matrix)\n",
+    "        dp = matrix[N - 1]\n",
+    "        for i in range(N - 2, -1, -1):\n",
+    "            newrow = []\n",
+    "            for j in range(N):\n",
+    "                newrow.append(matrix[i][j] + min(dp[j], dp[j - 1] if j - 1 >= 0 else math.inf, dp[j + 1] if j + 1 < N else math.inf))\n",
+    "            dp = newrow\n",
+    "\n",
+    "        return min(dp)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minFallingPathSum([[2,1,3],[6,5,4],[7,8,9]]) == 13\n",
+    "assert Solution().minFallingPathSum([[-19,57],[-40,-5]]) == -59\n",
+    "assert Solution().minFallingPathSum([[1]]) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88f5612e",
+   "metadata": {},
+   "source": [
+    "# 29. \n",
+    "Date: 19th Jan 2024<br>\n",
+    "Medium Leetcode: decode-string<br>\n",
+    "Solution: https://leetcode.com/problems/decode-string/submissions/1150250564"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "844f53bc-c822-4deb-a4e6-c40591db75c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def decodeString(self, s: str) -> str:\n",
+    "        stack = []\n",
+    "        for ch in s:\n",
+    "            if ch != \"]\":\n",
+    "                stack.append(ch)\n",
+    "            else:\n",
+    "                \n",
+    "                to_repeat = []\n",
+    "                prev_ch = \"\"\n",
+    "                while prev_ch != \"[\":\n",
+    "                    to_repeat.append(prev_ch)\n",
+    "                    prev_ch = stack.pop()\n",
+    "                to_repeat = \"\".join(to_repeat[::-1])\n",
+    "\n",
+    "                repeat_count = []\n",
+    "                while len(stack):\n",
+    "                    prev_ch = stack[-1]\n",
+    "                    if prev_ch.isnumeric():\n",
+    "                        repeat_count.append(prev_ch)\n",
+    "                        stack.pop()\n",
+    "                    else:\n",
+    "                        break\n",
+    "                repeat_count = int(\"\".join(repeat_count[::-1]))\n",
+    "\n",
+    "                stack.append(to_repeat * repeat_count)\n",
+    "\n",
+    "        return \"\".join(stack)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().decodeString(\"1[y]5[z2[x]3[k2[p]]]\") == \"yzxxkppkppkppzxxkppkppkppzxxkppkppkppzxxkppkppkppzxxkppkppkpp\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74620a5f",
+   "metadata": {},
+   "source": [
+    "# 30. \n",
+    "Date: 19th Jan 2024<br>\n",
+    "Medium Leetcode: clone-graph<br>\n",
+    "Solution: https://leetcode.com/problems/clone-graph/submissions/1150260315/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "33100161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, val = 0, neighbors = None):\n",
+    "        self.val = val\n",
+    "        self.neighbors = neighbors if neighbors is not None else []\n",
+    "\n",
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.graph = dict()\n",
+    "\n",
+    "    def cloneGraph(self, node: Node) -> Node:\n",
+    "        if not node:\n",
+    "            return node\n",
+    "        elif node.val in self.graph:\n",
+    "            return self.graph[node.val]\n",
+    "        else:\n",
+    "            clone = Node(node.val, [])\n",
+    "            self.graph[node.val] = clone\n",
+    "            neighbors = [self.cloneGraph(neighbor) for neighbor in node.neighbors]\n",
+    "            clone.neighbors = neighbors\n",
+    "            return clone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "200765e9",
+   "metadata": {},
+   "source": [
+    "# 31. \n",
+    "Date: 19th Jan 2024<br>\n",
+    "Medium Leetcode: count-good-nodes-in-binary-tree<br>\n",
+    "Solution: https://leetcode.com/problems/count-good-nodes-in-binary-tree/submissions/1150270252"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "02d995e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.goodNodeCount = 0\n",
+    "\n",
+    "    def goodNodes(self, curr: BinaryTreeNode, maximum=-math.inf) -> int:\n",
+    "\n",
+    "        if not curr:\n",
+    "            return\n",
+    "\n",
+    "        if curr.val >= maximum:\n",
+    "            self.goodNodeCount += 1\n",
+    "\n",
+    "        self.goodNodes(curr.left, maximum=max(maximum, curr.val)) \n",
+    "        self.goodNodes(curr.right, maximum=max(maximum, curr.val)) \n",
+    "\n",
+    "        return self.goodNodeCount\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().goodNodes(BinaryTreeNode.from_array([3,1,4,3,None,1,5])) == 4\n",
+    "assert Solution().goodNodes(BinaryTreeNode.from_array([3,1,5,3,None,1,4])) == 3\n",
+    "assert Solution().goodNodes(BinaryTreeNode.from_array([1])) == 1\n",
+    "assert Solution().goodNodes(BinaryTreeNode.from_array([3,3,None,4,2])) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13fc981b",
+   "metadata": {},
+   "source": [
+    "# 32. \n",
+    "Date: 19th Jan 2024<br>\n",
+    "Medium Leetcode: redundant-connection<br>\n",
+    "Solution: https://leetcode.com/problems/redundant-connection/submissions/1150754530"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6da0e1a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findRedundantConnection_(self, edges: List[List[int]]) -> List[int]:\n",
+    "        def DFS(start, end, visited=set()) -> bool:\n",
+    "            neighbours = paths[start]\n",
+    "            if end in neighbours:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return any(DFS(curr, end, {*visited, start}) for curr in neighbours if curr not in visited)\n",
+    "\n",
+    "        paths = dict()\n",
+    "        for start, end in edges:\n",
+    "            if start not in paths or end not in paths:\n",
+    "                paths[start] = paths.get(start, set())\n",
+    "                paths[end] = paths.get(end, set())\n",
+    "                paths[start].add(end)\n",
+    "                paths[end].add(start)\n",
+    "            else:\n",
+    "                # DFS to see if a connection already exists, create shortcuts\n",
+    "                if DFS(start, end):\n",
+    "                    return [start, end]\n",
+    "                else:\n",
+    "                    paths[start].add(end)\n",
+    "                    paths[end].add(start)\n",
+    "\n",
+    "    def findRedundantConnection(self, edges: List[List[int]]) -> List[int]:\n",
+    "        islands = []\n",
+    "        for start, end in edges:\n",
+    "\n",
+    "            # Find the island where start, end can be found\n",
+    "            start_idx = end_idx = -1\n",
+    "            for i in range(len(islands)):\n",
+    "                if start in islands[i]:\n",
+    "                    start_idx = i\n",
+    "                if end in islands[i]:\n",
+    "                    end_idx = i\n",
+    "                if start_idx != -1 and end_idx != -1:\n",
+    "                    break\n",
+    "\n",
+    "            # Based on whether start, end exists and where, we execute different scenarios\n",
+    "            if start_idx == -1 and end_idx == -1:\n",
+    "                islands.append({start, end})\n",
+    "            elif start_idx == -1:\n",
+    "                islands[end_idx].add(start)\n",
+    "            elif end_idx == -1:\n",
+    "                islands[start_idx].add(end)\n",
+    "            else:\n",
+    "                if start_idx == end_idx:\n",
+    "                    return [start, end]\n",
+    "                else:\n",
+    "                    # Merge the islands\n",
+    "                    island_1 = islands.pop(start_idx)\n",
+    "                    island_2 = islands.pop(end_idx - (1 if start_idx < end_idx else 0))\n",
+    "                    islands.append({*island_1, *island_2})\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findRedundantConnection([[1,2],[1,3],[2,3]]) == [2, 3]\n",
+    "assert Solution().findRedundantConnection([[1,2],[2,3],[3,4],[1,4],[1,5]]) == [1, 4]\n",
+    "assert Solution().findRedundantConnection([[3,4],[1,2],[2,4],[3,5],[2,5]]) == [2, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e0ef3d",
+   "metadata": {},
+   "source": [
+    "# 33. \n",
+    "Date: 19th Jan 2024<br>\n",
+    "Medium Leetcode: find-peak-element<br>\n",
+    "Solution: https://leetcode.com/problems/find-peak-element/submissions/1150772011"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0bdcccb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findPeakElement(self, nums: List[int]) -> int:\n",
+    "\n",
+    "        N = len(nums)\n",
+    "        start, end = 0, N - 1\n",
+    "        while start <= end:\n",
+    "\n",
+    "            mid = (start + end) // 2\n",
+    "            curr = nums[mid]\n",
+    "            left = nums[mid - 1] if mid - 1 >= 0 else -math.inf\n",
+    "            right = nums[mid + 1] if mid + 1 < N else -math.inf\n",
+    "\n",
+    "            if left < curr > right:\n",
+    "                return mid\n",
+    "            elif left < curr < right:\n",
+    "                start = mid + 1\n",
+    "            else:\n",
+    "                end = mid - 1\n",
+    "\n",
+    "        return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findPeakElement([1,2,1,3,5,6,4]) == 5\n",
+    "assert Solution().findPeakElement([1,2,3,1]) == 2\n",
+    "assert Solution().findPeakElement([0,1,2,3]) == 3\n",
+    "assert Solution().findPeakElement([3,2,1,0]) == 0\n",
+    "assert Solution().findPeakElement([1,-5,-2,-3]) == 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea83ad30",
+   "id": "c835bc64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1632,7 +1926,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844f53bc-c822-4deb-a4e6-c40591db75c4",
+   "id": "68358f49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e3c3bbe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1654,7 +1956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
